# MACE

./: .clang-format  .clang-tidy  .clang-tidy.in  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  MACE.c++  MACE.cc  MACEGlobal.hh  MACEGlobal.hxx  PSIMACE.cpp  README.md  SECURITY.md  STYLE_GUIDE.md  TODO.md  Test.sh  module_test.sh  run.sh
Core/Geometry/: CMakeLists.txt  DescriptionIO.cxx  DescriptionIO.hxx  Global.hxx  IDescription.cxx  IDescription.hxx  IEntity.cxx  IEntity.hxx  IEntity.ixx
DataModel/: CMakeLists.txt  Column.hh  Column.hxx  DataHub.cxx  DataHub.hxx  DataHub.ixx  Global.hh  Global.hxx  PersistencyReader.cc  PersistencyReader.cxx  PersistencyReader.hh  PersistencyReader.hxx  PersistencyReader.ixx  PersistencyWriter.cc  PersistencyWriter.cxx  PersistencyWriter.hh  PersistencyWriter.hxx  PersistencyWriter.ixx  TreeNameHandler.cc  TreeNameHandler.hh
DataModel/Base/: Data.cc  Data.hh  PersistencyHandler.cc  PersistencyHandler.hh
DataModel/BranchSocket/: BasicBranchSocket.ixx
DataModel/Core/: Column.hh  Data.cc  Data.hh  PersistencyHandler.cc  PersistencyHandler.hh
DataModel/Hit/: CalorimeterHit.cc  CalorimeterHit.cxx  CalorimeterHit.hh  CalorimeterHit.hxx  OrbitalDetectorHit.cc  OrbitalDetectorHit.cxx  OrbitalDetectorHit.hh  OrbitalDetectorHit.hxx  SpectrometerHit.cc  SpectrometerHit.cxx  SpectrometerHit.hh  SpectrometerHit.hxx  VertexDetectorHit.cxx  VertexDetectorHit.hxx
DataModel/Interface/: Data.cc  Data.cxx  Data.hh  Data.hxx  PersistencyHandler.cc  PersistencyHandler.cxx  PersistencyHandler.hh  PersistencyHandler.hxx
DataModel/SimHit/: CalorimeterSimHit.cxx  CalorimeterSimHit.hxx  SpectrometerSimHit.cxx  SpectrometerSimHit.hxx  VertexDetectorSimHit.cxx  VertexDetectorSimHit.hxx
DataModel/Track/: HelixTrack.cxx  HelixTrack.hxx
DataModel/TreeManager/: TreeConverter.hxx  TreeConverter.ixx  TreeProvider.cxx  TreeProvider.hxx  TreeProvider.ixx
DataModel/base/: Data.hh
DataModel/datamodel/: CalorimeterHit.hh  DataModelGlobal.hh  OrbitalDetectorHit.hh  SpectrometerHit.hh
DataModel/hit/: CalorimeterHit.cc  CalorimeterHit.hh  OrbitalDetectorHit.cc  OrbitalDetectorHit.hh  SpectrometerHit.cc  SpectrometerHit.hh
DataModel/include/: DataModelGlobal.hh  PersistencyWriter.hh
DataModel/src/: PersistencyWriter.cc
Geometry/: CMakeLists.txt  Global.hh  Global.hxx  MakeGeometry.cc  MakeGeometry.cxx  UnitSystem.hh  UnitSystem.hxx
Geometry/Description/: World.cxx  World.hh  World.hxx
Geometry/Entity/: Target.cc  Target.hh  World.cc  World.hh
Geometry/EntityROOT/: World.hh
Geometry/Interface/: Description.cc  Description.cxx  Description.hh  Description.hxx  Entity.cc  Entity.cxx  Entity.hh  Entity.hxx  Entity.ixx  Entity.tcc  EntityG4.hh  EntityG4.hxx  EntityG4.ixx  EntityG4.tcc  EntityROOT.cc  EntityROOT.hh  EntityROOT.hxx  EntityROOT.ixx  EntityROOT.tcc  EntityWithDescription.hh  EntityWithDescription.hxx  EntityWithDescription.ixx  EntityWithDescription.tcc  EntityWithDescription.txx
ReconSpectrometer/: CMakeLists.txt  Global.hxx  HelixParameters.hxx  ReconSpectrometer.cxx
ReconSpectrometer/Fitter/: DirectLeastChiSquare.hxx  DirectLeastChiSquare.txx  DirectSubSpaceLeastVariance.hxx  DirectSubSpaceLeastVariance.ixx  DirectSubSpaceLeastVariance.txx  Dummy.hxx  Dummy.ixx  Dummy.txx
ReconSpectrometer/Interface/: Fitter.hxx  Fitter.ixx  Fitter.txx  Reconstructor.cxx  Reconstructor.hxx  Reconstructor.txx
ReconSpectrometer/Reconstructor/: Hough.cxx  Hough.hxx  Hough.ixx  Hough.txx  TrueFinder.hxx  TrueFinder.ixx  TrueFinder.txx
Reconstruction/: CMakeLists.txt  Global.hh  Recognizer.cc  Recognizer.hh  ReconForwardDeclaration.hxx  Reconstruction.cc  Reconstruction.cxx  TOFAnalyzer.hh
Reconstruction/Fitter/: Kalman.cc  Kalman.hh  Kalman.hxx  Kalman.icc  Kalman.tcc  Kalman.txx
Reconstruction/Interface/: Recognizer.hxx  Recognizer.txx
Reconstruction/Recognizer/: Hough.hxx  Hough.txx  HoughBase.cc  HoughBase.hh  HoughBase.hxx  HoughBase.icc  HoughBase.tcc  HoughBase.txx  HoughCartesian.cc  HoughCartesian.hh  HoughCartesian.hxx  HoughCartesian.txx  HoughPolar.cc  HoughPolar.hh  HoughPolar.hxx  HoughPolar.icc  HoughPolar.tcc  HoughXY.cc  HoughXY.hh
Reconstruction/ReconCalorimeter/: CMakeLists.txt  README.md
Reconstruction/ReconMuonium/: CMakeLists.txt  ReconMuonium.cxx
Reconstruction/ReconSpectrometer/: CMakeLists.txt  Global.hxx  ReconSpectrometer.cxx
Reconstruction/ReconTracks/: CMakeLists.txt  Global.hxx  ITrackFinder.hxx  ITrackFinder.ixx  ITrackFitter.hxx  ITrackFitter.ixx  ReconTrack.cxx  ReconTracks.cxx
Reconstruction/include/: ExperimentData.hh  Hit.hh  Recognizer.hh  ReconstructionGlobal.hh
SimG4/: Analysis.cc  Analysis.cxx  Analysis.hh  Analysis.hxx  CMakeLists.txt  Global.hxx  README.md  SimG4.cc  SimG4.cxx
SimMACE/: Analysis.cxx  Analysis.hxx  CMakeLists.txt  Global.hxx  SimMACE.cxx
SimMTransport/: Analysis.cc  Analysis.cxx  Analysis.hxx  CMakeLists.txt  Global.cc  Global.cxx  Global.hh  Global.hxx  Master.cxx  Master.hh  Master.hxx  MonteCarlo.cc  MonteCarlo.cxx  MonteCarlo.hh  MonteCarlo.hxx  PostConfig.hh  RunManager.cc  RunManager.cxx  RunManager.hxx  SimMTransport.cc  SimMTransport.cxx  SimMTransportRun.cc  Step.cc  Step.hh  Step.hxx  Track.cc  Track.cxx  Track.hh  Track.hxx  Vector3.hh  Worker.cc  Worker.hxx  sample.cfg
SimMuTransport/: CMakeLists.txt  Post.C  README.md  SimMuTransportPost.cc  SimMuTransportRun.cc
Simulation/: CMakeLists.txt  SimForwardDeclaration.hxx
SpectrometerReconstruction/: CMakeLists.txt  SpectrometerReconstruction.cc
Tests/: CMakeLists.txt  DescriptionIO.cxx  MakeGeometry.cxx  TrackConversion.cxx
TrackReconstruction/: CMakeLists.txt  TrackReconstruction.cc
Utility/: CMakeLists.txt  EigenCompatibility.hxx  FileTools4MPI.cxx  FileTools4MPI.hxx  G4MPIRunManager.cxx  G4MPIRunManager.hxx  LiteralUnits.hxx  ObserverPtr.hxx  PhysicalConstant.hxx  ShortString.hxx  ShortString.ixx  UnitSystem.hxx  UtilityForwardDeclaration.hxx  VerboseLevel.hxx
source/: CMakeLists.txt
test/: CMakeLists.txt  DescriptionIO.cxx  MakeGeometry.cxx  TrackConversion.cxx
(+5954 files in other folders)
